<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TreeRecordTabs.Tab1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/navHeader1_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_item2" />

            <Spinner
                android:id="@+id/listTypesSpin"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_item3" />

            <TextView
                android:id="@+id/scientific_nameTxt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/hintText2"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_item4" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/trunk_diameterTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintText3"
                android:inputType="number"
                android:maxLength="5" />

            <com.google.android.material.chip.Chip
                android:id="@+id/convertToDiameterBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:padding="5dp"
                android:text="@string/nav_item4_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_item5" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tree_heightTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintText4"
                android:inputType="numberSigned"
                android:maxLength="4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_item6" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/skeletal_branchesTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintText5"
                android:inputType="numberSigned"
                android:maxLength="3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_item7" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/conditionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintText6"
                android:inputType="text"
                android:maxLength="100" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>