<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TreeRecordTabs.Tab2">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:isScrollContainer="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/navHeader2_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_item8" />

            <com.google.android.material.chip.Chip
                android:id="@+id/input_dateTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:enabled="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_item9" />

            <com.google.android.material.chip.Chip
                android:id="@+id/plant_dateTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_item10" />

            <com.google.android.material.chip.Chip
                android:id="@+id/remove_dateTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_item11" />

            <Spinner
                android:id="@+id/listChangesSpin"
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>