<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/txtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/unsignedTxtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loginHint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50"
                    android:inputType="textPersonName"
                    android:hint="@string/loginHint"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50"
                    android:inputType="textPassword"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signedTxtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_margin="20dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstNameHint"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:inputType="textPersonName"
                android:singleLine="true"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastNameHint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:inputType="textPersonName"
                android:singleLine="true"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loginHint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailHint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="100"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordHint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pwdTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPasswordHint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPwdTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:singleLine="true"
                android:inputType="textPassword"
                />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtLayout"
        android:orientation="vertical"
        android:visibility="visible"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/signInBtn"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/signUpBtn"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createAccountBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/createAccountBtn"
            android:visibility="gone"/>
    </LinearLayout>
</RelativeLayout>